# vfs.nfs

./: .travis.yml  CMakeLists.txt  FindNFS.cmake  README.md  appveyor.yml
debian/: changelog.in  control  copyright  rules
depends/common/nfs/: CMakeLists.txt  nfs.sha256  nfs.txt
depends/windows/nfs/: 0001-fixed-CMake-build-on-windows-few-trivial-fixes.patch  0002-fix-windows-uwp-build.patch  0003-fix-libnfs-cmake-build-as-static.patch  01-fix-windows-cmake.patch  01-libnfs-cmake.patch  02-snprintf.patch  03-unsigned-minus.patch  CMakeLists.txt  nfs.sha256  nfs.txt
src/: NFSConnection.cpp  NFSConnection.h  NFSFile.cpp  NFSFile.h
vfs.nfs/: addon.xml  addon.xml.in
